--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
+    "ng2-completer": "^1.4.0",
     "ngx-pipes": "^1.5.10",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
